# simple-symb

./: README.md  dune-project  simple-symb.opam
lib/: dune  simpleAST.mli  simpleLexer.mll  simpleLib.ml  simpleParser.mly  simpleSymbInterpreter.ml  simpleSymbInterpreter.mli  simpleUtils.ml  simpleUtils.mli
test/examples/: division_by_zero.t  invoke_test.example
